cabal-version:      2.4
name:               emanote
version:            0.6.20.0
license:            AGPL-3.0-only
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:        https://github.com/srid/emanote/issues
extra-source-files:
  LICENSE
  README.md

data-dir:           default
data-files:
  _emanote-bin/compile-css
  _emanote-live-server/**/*.css
  _emanote-static/**/*.ttf
  _emanote-static/*.css
  _emanote-static/*.svg
  favicon.svg
  index.md
  index.yaml
  templates/**/*.tpl

common haskell-common
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded -rtsopts
    -with-rtsopts=-N

  default-extensions:
    NoImplicitPrelude
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

common library-common
  import:           haskell-common
  default-language: Haskell2010

  -- TODO: We could use the ghcid flag trick in neuron.cabal to avoid rebuilds.
  hs-source-dirs:   src
  build-depends:
    , aeson
    , aeson-extra
    , aeson-optics
    , async
    , base
    , blaze-html
    , bytestring
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , commonmark-simple
    , containers
    , data-default
    , dependent-sum
    , directory
    , ema                    >=0.7.2
    , filepath
    , filepattern
    , fsnotify
    , hedgehog
    , heist-emanote          >=1.2.1
    , hspec
    , hspec-hedgehog
    , ixset-typed            >=0.5.1.0
    , lvar
    , map-syntax
    , megaparsec
    , monad-logger
    , mtl
    , neat-interpolation
    , optics-core
    , optics-th
    , optparse-applicative
    , pandoc
    , pandoc-link-context    >=1.4.0
    , pandoc-types
    , parsec
    , path-tree              >=0.2
    , process-extras
    , profunctors
    , relude                 >=1.0
    , shower
    , some
    , tagged
    , tagtree
    , tailwind               >=0.3
    , text
    , time
    , tomland
    , unionmount             >=0.2
    , unliftio
    , unordered-containers
    , uri-encode
    , url-slug
    , uuid
    , which
    , with-utf8
    , xmlhtml
    , yaml

  hs-source-dirs:   src
  default-language: Haskell2010

library
  import:          library-common
  exposed-modules:
    Emanote
    Emanote.CLI
    Emanote.Model
    Emanote.Model.Calendar
    Emanote.Model.Graph
    Emanote.Model.Link.Rel
    Emanote.Model.Link.RelSpec
    Emanote.Model.Link.Resolve
    Emanote.Model.Meta
    Emanote.Model.Note
    Emanote.Model.Note.Filter
    Emanote.Model.Query
    Emanote.Model.QuerySpec
    Emanote.Model.SData
    Emanote.Model.StaticFile
    Emanote.Model.Task
    Emanote.Model.Title
    Emanote.Model.Type
    Emanote.Pandoc.BuiltinFilters
    Emanote.Pandoc.Link
    Emanote.Pandoc.Markdown.Parser
    Emanote.Pandoc.Markdown.Syntax.HashTag
    Emanote.Pandoc.Markdown.Syntax.Highlight
    Emanote.Pandoc.Markdown.Syntax.WikiLink
    Emanote.Pandoc.Renderer
    Emanote.Pandoc.Renderer.Embed
    Emanote.Pandoc.Renderer.Query
    Emanote.Pandoc.Renderer.Url
    Emanote.Prelude
    Emanote.Route
    Emanote.Route.Ext
    Emanote.Route.ModelRoute
    Emanote.Route.R
    Emanote.Route.SiteRoute
    Emanote.Route.SiteRoute.Class
    Emanote.Route.SiteRoute.Type
    Emanote.Source.Dynamic
    Emanote.Source.Loc
    Emanote.Source.Patch
    Emanote.Source.Pattern
    Emanote.View
    Emanote.View.Common
    Emanote.View.Export
    Emanote.View.LiveServerFiles
    Emanote.View.Stork
    Emanote.View.TagIndex
    Emanote.View.TaskIndex
    Emanote.View.Template
    Heist.Extra
    Heist.Extra.Splices.List
    Heist.Extra.Splices.Pandoc
    Heist.Extra.Splices.Pandoc.Attr
    Heist.Extra.Splices.Pandoc.Ctx
    Heist.Extra.Splices.Pandoc.Footnotes
    Heist.Extra.Splices.Pandoc.Render
    Heist.Extra.Splices.Pandoc.TaskList
    Heist.Extra.Splices.Tree
    Heist.Extra.TemplateState
    Paths_emanote
    Spec

  autogen-modules: Paths_emanote

executable emanote
  import:  library-common
  main-is: Main.hs
