cabal-version:      2.4
name:               emanote
version:            0.8.0.0
license:            AGPL-3.0-only
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web
synopsis:           Emanate a structured view of your plain-text notes
description:
  Create beautiful websites -- such as personal webpage, blog, wiki, Zettelkasten, notebook, knowledge-base, documentation, etc. from future-proof plain-text notes and arbitrary data -- with live preview that updates in real-time.

-- A URL where users can report bugs.
bug-reports:        https://github.com/EmaApps/emanote/issues
extra-source-files:
  LICENSE
  README.md

data-dir:           default
data-files:
  _emanote-bin/compile-css
  _emanote-live-server/**/*.css
  _emanote-static/**/*.ttf
  _emanote-static/*.css
  _emanote-static/*.svg
  _emanote-static/stork/flat.css
  _emanote-static/stork/stork.js
  _emanote-static/stork/stork.wasm
  favicon.svg
  index.md
  index.yaml
  templates/**/*.tpl

common haskell-common
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoImplicitPrelude
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

common library-common
  import:           haskell-common
  default-language: Haskell2010

  -- TODO: We could use the ghcid flag trick in neuron.cabal to avoid rebuilds.
  hs-source-dirs:   src
  build-depends:
    , aeson
    , aeson-extra
    , aeson-optics
    , async
    , base                   >=4.14    && <5
    , blaze-html
    , bytestring
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , commonmark-simple
    , containers
    , data-default
    , dependent-sum
    , directory
    , ema                    >=0.8.2
    , filepath
    , filepattern
    , fsnotify
    , hedgehog
    , heist-emanote          >=1.2.1
    , heist-extra
    , hspec
    , hspec-hedgehog
    , ixset-typed            >=0.5.1.0
    , lvar
    , map-syntax
    , megaparsec
    , monad-logger
    , monad-logger-extras
    , mtl
    , neat-interpolation
    , optics-core
    , optics-th
    , optparse-applicative
    , pandoc
    , pandoc-link-context    >=1.4.0
    , pandoc-types
    , parsec
    , path-tree              >=0.2
    , process-extras
    , profunctors
    , relude                 >=1.0
    , shower
    , some
    , stm
    , tagged
    , tagtree
    , tailwind               >=0.3
    , text
    , time
    , tomland
    , unionmount             >=0.2
    , unliftio
    , unordered-containers
    , uri-encode
    , url-slug
    , uuid
    , which
    , with-utf8
    , xmlhtml
    , yaml

  hs-source-dirs:   src

library
  import:          library-common
  exposed-modules:
    Emanote
    Emanote.CLI
    Emanote.Model
    Emanote.Model.Calendar
    Emanote.Model.Graph
    Emanote.Model.Link.Rel
    Emanote.Model.Link.RelSpec
    Emanote.Model.Link.Resolve
    Emanote.Model.Meta
    Emanote.Model.Note
    Emanote.Model.Note.Filter
    Emanote.Model.Query
    Emanote.Model.QuerySpec
    Emanote.Model.SData
    Emanote.Model.StaticFile
    Emanote.Model.Stork
    Emanote.Model.Stork.Index
    Emanote.Model.Task
    Emanote.Model.Title
    Emanote.Model.Type
    Emanote.Pandoc.BuiltinFilters
    Emanote.Pandoc.Link
    Emanote.Pandoc.Markdown.Parser
    Emanote.Pandoc.Markdown.Syntax.HashTag
    Emanote.Pandoc.Markdown.Syntax.Highlight
    Emanote.Pandoc.Markdown.Syntax.WikiLink
    Emanote.Pandoc.Renderer
    Emanote.Pandoc.Renderer.Embed
    Emanote.Pandoc.Renderer.Query
    Emanote.Pandoc.Renderer.Url
    Emanote.Prelude
    Emanote.Route
    Emanote.Route.Ext
    Emanote.Route.ModelRoute
    Emanote.Route.R
    Emanote.Route.SiteRoute
    Emanote.Route.SiteRoute.Class
    Emanote.Route.SiteRoute.Type
    Emanote.Source.Dynamic
    Emanote.Source.Loc
    Emanote.Source.Patch
    Emanote.Source.Pattern
    Emanote.View
    Emanote.View.Common
    Emanote.View.Export
    Emanote.View.LiveServerFiles
    Emanote.View.TagIndex
    Emanote.View.TaskIndex
    Emanote.View.Template
    Paths_emanote
    Spec

  autogen-modules: Paths_emanote

executable emanote
  import:      library-common
  main-is:     Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
